--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,5 +10,5 @@
 body {
   font-family: "Roboto", sans-serif;
   background: rgb(var(--background));
-  /* counter-reset: #e1e1e1; */
+  /* counter-reset: #292929; */
 }
