--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,3 +12,8 @@ body {
   background: rgb(var(--background));
   /* counter-reset: #292929; */
 }
+
+.rdrDefinedRangesWrapper {
+  border-right: none !important;
+  width: 0 !important;
+}
